--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,13 @@
     {% include head-custom.html %}
   </head>
   <body>
+    <div class="sidebar">
+      <ul>
+        <li><a href="{{ site.baseurl }}/">Home</a></li>
+        <li><a href="{{ site.baseurl }}/about/">About</a></li>
+        <!-- Aggiungi altri link qui -->
+      </ul>
+    </div>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
