--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,8 +15,12 @@
   <body>
     <div class="sidebar">
       <ul>
-        <li><a href="{{ site.baseurl }}/">Home</a></li>
-        <li><a href="{{ site.baseurl }}/about/">About</a></li>
+        <li><a href="{{ site.baseurl }}/">Introduzione</a></li>
+        <li><a href="{{ site.baseurl }}/documentazione_menu/">Documentazione</a></li>
+        <ul>
+          <li><a href="{{ site.baseurl }}/documentazione/scoping/">Scoping</a></li>
+        </ul>
+        <li><a href="{{ site.baseurl }}/approccio_menu/">Approccio</a></li>
         <!-- Aggiungi altri link qui -->
       </ul>
     </div>
