--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,11 @@
     <div class="sidebar">
       <ul>
         <li><a href="{{ site.baseurl }}/">Introduzione</a></li>
-        <li><a href="{{ site.baseurl }}/documentazione_menu/">Documentazione</a></li>
+        <li><a href="{{ site.baseurl }}/documentazione_menu">Documentazione</a></li>
         <ul>
-          <li><a href="{{ site.baseurl }}/documentazione/scoping/">Scoping</a></li>
+          <li><a href="{{ site.baseurl }}/documentazione/scoping">Scoping</a></li>
         </ul>
-        <li><a href="{{ site.baseurl }}/approccio_menu/">Approccio</a></li>
+        <li><a href="{{ site.baseurl }}/approccio_menu">Approccio</a></li>
         <!-- Aggiungi altri link qui -->
       </ul>
     </div>
