--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,20 +19,20 @@
   padding: 20px;
 }
 
-.sidebar ul {
-  list-style-type: none;
+.sidebar ol {
+  list-style-type: decimal;
   padding: 0;
 }
 
-.sidebar ul li {
+.sidebar ol li {
   margin: 10px 0;
 }
 
-.sidebar ul li a {
+.sidebar ol li a {
   text-decoration: none;
   color: #333;
 }
 
-.sidebar ul li a:hover {
+.sidebar ol li a:hover {
   text-decoration: underline;
 }
