--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,11 @@
     <div class="sidebar">
       <ol>
         <li><a href="{{ site.baseurl }}/">Introduzione</a></li>
-        <li><a href="{{ site.baseurl }}/documentazione_menu">Documentazione</a></li>
-        <ol>
-          <li><a href="{{ site.baseurl }}/documentazione/scoping">Scoping</a></li>
-        </ol>
+        <li><a href="{{ site.baseurl }}/documentazione_menu">Documentazione</a>
+          <ol>
+            <li><a href="{{ site.baseurl }}/documentazione/scoping">Scoping</a></li>
+          </ol>
+        </li>
         <li><a href="{{ site.baseurl }}/approccio_menu">Approccio</a></li>
         <!-- Aggiungi altri link qui -->
       </ol>
