--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,3 @@
----
----
-
 @import 'jekyll-theme-cayman';
 
 .sidebar {
@@ -15,13 +12,13 @@
 }
 
 .main-content {
-  margin-left: 320px; /* spazio per il sidebar */
+  margin-left: 220px; /* spazio per il sidebar */
   padding: 20px;
 }
 
 .sidebar ol {
   list-style-type: decimal;
-  padding: 0;
+  padding-left: 20px; /* aggiungi padding per l'indentazione */
 }
 
 .sidebar ol li {
@@ -29,10 +26,19 @@
 }
 
 .sidebar ol li a {
-  text-decoration: decimal;
+  text-decoration: none;
   color: #333;
 }
 
 .sidebar ol li a:hover {
   text-decoration: underline;
+}
+
+.sidebar ol ol {
+  list-style-type: lower-alpha; /* o qualsiasi stile tu preferisca per i sottoelenchi */
+  padding-left: 20px; /* aggiungi padding per il sottoelenco */
+}
+
+.sidebar ol ol li {
+  margin: 5px 0; /* margine più piccolo per i sottoelementi */
 }
