--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,9 +9,10 @@ $header-bg-color-secondary: #155799 !default;
 
 // Text
 $section-headings-color: #159957 !default;
-$body-text-color: #606c71 !default;
+$body-text-color: #fff !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
+$body-background-color: #262626 !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
