--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,14 +4,14 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+$header-bg-color: #38AF74 !default;
+$header-bg-color-secondary: #38AF74 !default;
 
 // Text
 $section-headings-color: #159957 !default;
 $body-text-color: #fff !default;
-$body-link-color: #1e6bb8 !default;
-$blockquote-text-color: #819198 !default;
+$body-link-color: #5790C8 !default;
+$blockquote-text-color: #fff !default;
 $body-background-color: #262626 !default;
 
 // Code
