--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,8 +4,8 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #38AF74 !default;
-$header-bg-color-secondary: #38AF74 !default;
+$header-bg-color: #159957 !default;
+$header-bg-color-secondary: #155799 !default;
 
 // Text
 $section-headings-color: #159957 !default;
@@ -13,6 +13,7 @@ $body-text-color: #fff !default;
 $body-link-color: #5790C8 !default;
 $blockquote-text-color: #fff !default;
 $body-background-color: #262626 !default;
+$h1-color:#4DC388 !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
