--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,6 +12,8 @@
   background-color: #f8f8f8;
   padding: 20px;
   box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+  background-color:#3E3E3E;
+  color: $body-text-color;
 }
 
 .main-content {
