--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -23,6 +23,13 @@ body {
 /* HTML5 display definitions
    ========================================================================== */
 
+header,
+main
+{
+  width=80%
+}
+
+
 /**
  * Correct `block` display not defined for any HTML5 element in IE 8/9.
  * Correct `block` display not defined for `details` or `summary` in IE 10/11
