--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -24,8 +24,7 @@ body {
    ========================================================================== */
 
 header,
-main
-{
+main {
   width=80%
 }
 
