--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -8,8 +8,8 @@
 
 html {
   font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  -ms-text-size-adjust: 80%; /* 2 */
+  -webkit-text-size-adjust: 80%; /* 2 */
 }
 
 /**
@@ -17,7 +17,7 @@ html {
  */
 
 body {
-   margin-left: 20%;
+   margin: 0;
 }
 
 /* HTML5 display definitions
