--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@
 }
 
 .main-content {
-  margin-left: 220px; /* spazio per il sidebar */
+  margin-left: 20%; /* spazio per il sidebar */
   padding: 20px;
 }
 
