--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,19 @@
         <li><a href="{{ site.baseurl }}/">Introduzione</a></li>
         <li><a href="{{ site.baseurl }}/documentazione_menu">Documentazione</a>
           <ol>
-            <li><a href="{{ site.baseurl }}/documentazione/scoping">Scoping</a></li>
+            <li><a href="{{ site.baseurl }}/documentazione/scoping">Scoping</a>
+              <ol>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/CoS">CoS</a></li>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/POS">POS</a></li>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/Analisi_rischi">Analisi rischi</a></li>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/SWOT">SWOT</a></li>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/post_prototipo">post prototipo</a></li>
+              </ol>
+            </li>
+            <li><a href="{{ site.baseurl }}/documentazione/planning">Planning</a></li>
+            <li><a href="{{ site.baseurl }}/documentazione/monitoring">Monitoring</a></li>
+            <li><a href="{{ site.baseurl }}/documentazione/launching">Launching</a></li>
+            <li><a href="{{ site.baseurl }}/documentazione/closing">Closing</a></li>
           </ol>
         </li>
         <li><a href="{{ site.baseurl }}/approccio_menu">Approccio</a></li>
