--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,15 @@
             <li><a href="{{ site.baseurl }}/documentazione/closing">Closing</a></li>
           </ol>
         </li>
-        <li><a href="{{ site.baseurl }}/approccio_menu">Approccio</a></li>
+        <li><a href="{{ site.baseurl }}/approccio_menu">Approccio</a>
+          <ol>
+            <li><a href="{{ site.baseurl }}/approccio/scoping">Scoping</a></li>
+            <li><a href="{{ site.baseurl }}/approccio/planning">Planning</a></li>
+            <li><a href="{{ site.baseurl }}/approccio/monitoring">Monitoring</a></li>
+            <li><a href="{{ site.baseurl }}/approccio/launching">Launching</a></li>
+            <li><a href="{{ site.baseurl }}/approccio/closing">Closing</a></li>
+          </ol>
+        </li>
         <!-- Aggiungi altri link qui -->
       </ol>
     </div>
