--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,7 +10,7 @@ $header-bg-color-secondary: #702abf !default;
 // Text
 $section-headings-color: #159957 !default;
 $body-text-color: #fff !default;
-$body-link-color: #759ec7 !default;//#5790C8 
+$body-link-color: #57b3c8 !default;//#759ec7 !default;//#5790C8 
 $blockquote-text-color: #fff !default;
 $body-background-color: #262626 !default;
 $h1-color:#4DC388 !default;
