--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -258,7 +258,7 @@ input,
 optgroup,
 select,
 textarea {
-  color: #262626 !default; /* 1 */
+  color: inherit; /* 1 */
   font: inherit; /* 2 */
   margin: 0;
 }
