--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
                 <li><a href="{{ site.baseurl }}/documentazione/scopingC/Analisi_rischi">Analisi rischi</a></li>
                 <li><a href="{{ site.baseurl }}/documentazione/scopingC/SWOT">SWOT</a></li>
                 <li><a href="{{ site.baseurl }}/documentazione/scopingC/post_prototipo">post prototipo</a></li>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/RBS">RBS</a></li>
               </ol>
             </li>
             <li><a href="{{ site.baseurl }}/documentazione/planning">Planning</a></li>
