--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -65,7 +65,7 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(13, 13, 13, 0.7);
+  color: rgba(0,0,0, 0.7);
   background-color: rgba(38, 38, 38, 0.08);
   border-color: rgba(38, 38, 38, 0.2);
   border-style: solid;
@@ -74,7 +74,7 @@ a {
   transition: color 0.2s, background-color 0.2s, border-color 0.2s;
 
   &:hover {
-    color: rgba(13, 13, 13, 0.8);
+    color: rgba(0,0,0, 0.8);
     text-decoration: none;
     background-color: rgba(38, 38, 38, 0.2);
     border-color: rgba(38, 38, 38, 0.3);
