--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,7 +3,7 @@ $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
-$header-heading-color: #0d0d0d !default;
+$header-heading-color: #262626 !default;
 $header-bg-color: #159957 !default;
 $header-bg-color-secondary: #702abf !default;
 
