--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,6 +36,10 @@
   color: $body-text-color;
 }
 
+.sidebar ol li a.active {
+  color: #4DC388; /* Colore per l'elemento selezionato */
+  font-weight: bold;
+}
 
 .sidebar li { display: block; }
 .sidebar li:before { content: counters(item, ".") ". "; counter-increment: item; }
