--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -37,7 +37,7 @@
 }
 
 .sidebar ol li.active {
-  color: #4DC388; /* Colore per l'elemento selezionato */
+  color: #4DC388 !important; /* Colore per l'elemento selezionato */
   font-weight: bold;
 }
 
