--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -36,16 +36,14 @@
   color: $body-text-color;
 }
 
+.sidebar ol li.active:before {
+  color: #4DC388; /* Colore verde per il numero dell'elenco selezionato */
+}
+
 .sidebar ol li a.active {
-  color: #4DC388 ; /* Colore per l'elemento selezionato */
+  color: #4DC388; /* Colore per l'elemento selezionato */
   font-weight: bold;
 }
-
-.sidebar ol li.active:before,
-.sidebar ol li a.active {
-  color: #4DC388; /* Colore verde per l'elemento selezionato e il numero */
-}
-
 .sidebar li { display: block; }
 .sidebar li:before { content: counters(item, ".") ". "; counter-increment: item; }
 
