--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div class="sidebar">
       <ol>
         <li class="{% if page.url == '/' %}active{% endif %}"><a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}active{% endif %}">Introduzione</a></li>
-        <li class="{% if page.url == '/documentazione_menu' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu" class="{% if page.url == '/documentazione_menu' %}active{% endif %}">Documentazione</a>
+        <li class="{% if page.url == site.baseurl + '/documentazione_menu' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu" class="{% if page.url == site.baseurl +  '/documentazione_menu' %}active{% endif %}">Documentazione</a>
           <ol>
             <li><a href="{{ site.baseurl }}/documentazione/scoping" class="{% if page.url == '/scoping' %}active{% endif %}">Scoping</a>
               <ol>
