--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
                 <li><a href="{{ site.baseurl }}/documentazione/scopingC/canvas" class="{% if page.url == '/canvas' %}active{% endif %}">Canvas</a></li>
                 <li><a href="{{ site.baseurl }}/documentazione/scopingC/RBS" class="{% if page.url == '/RBS' %}active{% endif %}">RBS</a></li>
                 <li><a href="{{ site.baseurl }}/documentazione/scopingC/user_flow" class="{% if page.url == '/user_flow' %}active{% endif %}">User flow</a></li>
+                <li><a href="{{ site.baseurl }}/documentazione/scopingC/user_stories" class="{% if page.url == '/user_stories' %}active{% endif %}">User stories</a></li>
               </ol>
             </li>
             <li><a href="{{ site.baseurl }}/documentazione/planning" class="{% if page.url == '/planning' %}active{% endif %}">Planning</a></li>
