--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,42 +13,42 @@
     {% include head-custom.html %}
   </head>
   <body>
-    <div class="sidebar">
+   <div class="sidebar">
+  <ol>
+    <li class="{% if page.url == '/' %}active{% endif %}"><a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}active{% endif %}">Introduzione</a></li>
+    <li class="{% if page.url == '/documentazione_menu/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu" class="{% if page.url == '/documentazione_menu/' %}active{% endif %}">Documentazione</a>
       <ol>
-        <li class="{% if page.url == '/' %}active{% endif %}"><a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}active{% endif %}">Introduzione</a></li>
-        <li class="{% if page.url == site.baseurl + '/documentazione_menu' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu" class="{% if page.url == site.baseurl +  '/documentazione_menu' %}active{% endif %}">Documentazione</a>
+        <li class="{% if page.url == '/documentazione/scoping/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scoping" class="{% if page.url == '/documentazione/scoping/' %}active{% endif %}">Scoping</a>
           <ol>
-            <li><a href="{{ site.baseurl }}/documentazione/scoping" class="{% if page.url == '/scoping' %}active{% endif %}">Scoping</a>
-              <ol>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/CoS" class="{% if page.url == '/CoS' %}active{% endif %}">CoS</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/POS" class="{% if page.url == '/POS' %}active{% endif %}">POS</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/Analisi_rischi" class="{% if page.url == '/Analisi_rischi' %}active{% endif %}">Analisi rischi</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/SWOT" class="{% if page.url == '/SWOT' %}active{% endif %}">SWOT</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/post_prototipo" class="{% if page.url == '/post_prototipo' %}active{% endif %}">post prototipo</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/canvas" class="{% if page.url == '/canvas' %}active{% endif %}">Canvas</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/RBS" class="{% if page.url == '/RBS' %}active{% endif %}">RBS</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/user_stories" class="{% if page.url == '/user_stories' %}active{% endif %}">User stories</a></li>
-                <li><a href="{{ site.baseurl }}/documentazione/scopingC/user_flow" class="{% if page.url == '/user_flow' %}active{% endif %}">User flow</a></li>
-              </ol>
-            </li>
-            <li><a href="{{ site.baseurl }}/documentazione/planning" class="{% if page.url == '/planning' %}active{% endif %}">Planning</a></li>
-            <li><a href="{{ site.baseurl }}/documentazione/monitoring" class="{% if page.url == '/monitoring' %}active{% endif %}">Monitoring</a></li>
-            <li><a href="{{ site.baseurl }}/documentazione/launching" class="{% if page.url == '/launching' %}active{% endif %}">Launching</a></li>
-            <li><a href="{{ site.baseurl }}/documentazione/closing" class="{% if page.url == '/closing' %}active{% endif %}">Closing</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/CoS" class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}">CoS</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/POS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/POS" class="{% if page.url == '/documentazione/scopingC/POS/' %}active{% endif %}">POS</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/Analisi_rischi/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/Analisi_rischi" class="{% if page.url == '/documentazione/scopingC/Analisi_rischi/' %}active{% endif %}">Analisi rischi</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/SWOT/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/SWOT" class="{% if page.url == '/documentazione/scopingC/SWOT/' %}active{% endif %}">SWOT</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/post_prototipo/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/post_prototipo" class="{% if page.url == '/documentazione/scopingC/post_prototipo/' %}active{% endif %}">post prototipo</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/canvas/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/canvas" class="{% if page.url == '/documentazione/scopingC/canvas/' %}active{% endif %}">Canvas</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/RBS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/RBS" class="{% if page.url == '/documentazione/scopingC/RBS/' %}active{% endif %}">RBS</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/user_stories/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/user_stories" class="{% if page.url == '/documentazione/scopingC/user_stories/' %}active{% endif %}">User stories</a></li>
+            <li class="{% if page.url == '/documentazione/scopingC/user_flow/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/user_flow" class="{% if page.url == '/documentazione/scopingC/user_flow/' %}active{% endif %}">User flow</a></li>
           </ol>
         </li>
-        <li><a href="{{ site.baseurl }}/approccio_menu" class="{% if page.url == '/approccio_menu' %}active{% endif %}">Approccio</a>
-          <ol>
-            <li><a href="{{ site.baseurl }}/approccio/scoping" class="{% if page.url == '/scoping' %}active{% endif %}">Scoping</a></li>
-            <li><a href="{{ site.baseurl }}/approccio/planning" class="{% if page.url == '/planning' %}active{% endif %}">Planning</a></li>
-            <li><a href="{{ site.baseurl }}/approccio/monitoring" class="{% if page.url == '/monitoring' %}active{% endif %}">Monitoring</a></li>
-            <li><a href="{{ site.baseurl }}/approccio/launching" class="{% if page.url == '/launching' %}active{% endif %}">Launching</a></li>
-            <li><a href="{{ site.baseurl }}/approccio/closing" class="{% if page.url == '/closing' %}active{% endif %}">Closing</a></li>
-          </ol>
-        </li>
-        <!-- Aggiungi altri link qui -->
+        <li class="{% if page.url == '/documentazione/planning/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/planning" class="{% if page.url == '/documentazione/planning/' %}active{% endif %}">Planning</a></li>
+        <li class="{% if page.url == '/documentazione/monitoring/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/monitoring" class="{% if page.url == '/documentazione/monitoring/' %}active{% endif %}">Monitoring</a></li>
+        <li class="{% if page.url == '/documentazione/launching/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/launching" class="{% if page.url == '/documentazione/launching/' %}active{% endif %}">Launching</a></li>
+        <li class="{% if page.url == '/documentazione/closing/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/closing" class="{% if page.url == '/documentazione/closing/' %}active{% endif %}">Closing</a></li>
       </ol>
-    </div>
+    </li>
+    <li class="{% if page.url == '/approccio_menu/' %}active{% endif %}"><a href="{{ site.baseurl }}/approccio_menu" class="{% if page.url == '/approccio_menu/' %}active{% endif %}">Approccio</a>
+      <ol>
+        <li class="{% if page.url == '/approccio/scoping/' %}active{% endif %}"><a href="{{ site.baseurl }}/approccio/scoping" class="{% if page.url == '/approccio/scoping/' %}active{% endif %}">Scoping</a></li>
+        <li class="{% if page.url == '/approccio/planning/' %}active{% endif %}"><a href="{{ site.baseurl }}/approccio/planning" class="{% if page.url == '/approccio/planning/' %}active{% endif %}">Planning</a></li>
+        <li class="{% if page.url == '/approccio/monitoring/' %}active{% endif %}"><a href="{{ site.baseurl }}/approccio/monitoring" class="{% if page.url == '/approccio/monitoring/' %}active{% endif %}">Monitoring</a></li>
+        <li class="{% if page.url == '/approccio/launching/' %}active{% endif %}"><a href="{{ site.baseurl }}/approccio/launching" class="{% if page.url == '/approccio/launching/' %}active{% endif %}">Launching</a></li>
+        <li class="{% if page.url == '/approccio/closing/' %}active{% endif %}"><a href="{{ site.baseurl }}/approccio/closing" class="{% if page.url == '/approccio/closing/' %}active{% endif %}">Closing</a></li>
+      </ol>
+    </li>
+    <!-- Aggiungi altri link qui -->
+  </ol>
+</div>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
     <header class="page-header" role="banner">
