--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
    <div class="sidebar">
   <ol>
     <li class="{% if page.url == '/' %}active{% endif %}"><a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}active{% endif %}">Introduzione</a></li>
-    <li class="{% if page.url == '/documentazione_menu/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu" class="{% if page.url == '/documentazione_menu/' %}active{% endif %}">Documentazione</a>
+    <li class="{% if page.url == '/documentazione_menu/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu/" class="{% if page.url == '/documentazione_menu/' %}active{% endif %}">Documentazione</a>
       <ol>
-        <li class="{% if page.url == '/documentazione/scoping/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scoping" class="{% if page.url == '/documentazione/scoping/' %}active{% endif %}">Scoping</a>
+        <li class="{% if page.url == '/documentazione/scoping' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scoping" class="{% if page.url == '/documentazione/scoping' %}active{% endif %}">Scoping</a>
           <ol>
             <li class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/CoS" class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}">CoS</a></li>
             <li class="{% if page.url == '/documentazione/scopingC/POS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/POS" class="{% if page.url == '/documentazione/scopingC/POS/' %}active{% endif %}">POS</a></li>
