--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <ol>
         <li class="{% if page.url == '/documentazione/scoping' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scoping" class="{% if page.url == '/documentazione/scoping' %}active{% endif %}">Scoping</a>
           <ol>
-            <li class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/CoS" class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}">CoS</a></li>
+            <li class="{% if page.url == "/documentazione/scopingC/CoS/" %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/CoS" class="{% if page.url == '/documentazione/scopingC/CoS/' %}active{% endif %}">CoS</a></li>
             <li class="{% if page.url == '/documentazione/scopingC/POS/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/POS" class="{% if page.url == '/documentazione/scopingC/POS/' %}active{% endif %}">POS</a></li>
             <li class="{% if page.url == '/documentazione/scopingC/Analisi_rischi/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/Analisi_rischi" class="{% if page.url == '/documentazione/scopingC/Analisi_rischi/' %}active{% endif %}">Analisi rischi</a></li>
             <li class="{% if page.url == '/documentazione/scopingC/SWOT/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/scopingC/SWOT" class="{% if page.url == '/documentazione/scopingC/SWOT/' %}active{% endif %}">SWOT</a></li>
