--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,7 @@
   </head>
   <body>
    <div class="sidebar">
+   <p>URL corrente: {{ page.url }}</p>
   <ol>
     <li class="{% if page.url == '/' %}active{% endif %}"><a href="{{ site.baseurl }}/" class="{% if page.url == '/' %}active{% endif %}">Introduzione</a></li>
     <li class="{% if page.url == '/documentazione_menu/' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione_menu" class="{% if page.url == '/documentazione_menu/' %}active{% endif %}">Documentazione</a>
