--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
         <li class="{% if page.url == '/documentazione/launching.html' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/launching" class="{% if page.url == '/documentazione/launching.html' %}active{% endif %}">Launching</a>
            <ol>
                      <li class="{% if page.url == '/documentazione/launchingC/RASCI.html' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/launchingC/RASCI" class="{% if page.url == '/documentazione/launchingC/RASCI.html' %}active{% endif %}">RASCI</a>
-                     <li class="{% if page.url == '/documentazione/launchingC/regole_operative.html' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/launchingC/regole_operative" class="{% if page.url == '/documentazione/launchingC/regole_operative.html' %}active{% endif %}">regole_operative</a>
+                     <li class="{% if page.url == '/documentazione/launchingC/regole_operative.html' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/launchingC/regole_operative" class="{% if page.url == '/documentazione/launchingC/regole_operative.html' %}active{% endif %}">Regole operative</a>
            </ol>
         </li>
         <li class="{% if page.url == '/documentazione/monitoring.html' %}active{% endif %}"><a href="{{ site.baseurl }}/documentazione/monitoring" class="{% if page.url == '/documentazione/monitoring.html' %}active{% endif %}">Monitoring</a></li>
