--- a/_sass/normalize.scss
+++ b/_sass/normalize.scss
@@ -416,7 +416,7 @@ optgroup {
 
 /**
  * Remove most spacing between table cells.
- */
+ 
 
 table {
   border-collapse: collapse;
@@ -426,4 +426,4 @@ table {
 td,
 th {
   padding: 0;
-}
+}*/
